[gd_scene load_steps=4 format=2]

[ext_resource path="res://Weapon/Assets/IBGP - Effects Starter Kit.png" type="Texture" id=1]
[ext_resource path="res://Weapon/Scripts/HitEffect.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "HitEffect"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.3 ) ]
}

[node name="HitEffect" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -13, 3 )
rotation = -1.5708
scale = Vector2( 0.5, 1.3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 24, 567, 29, 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitEffect = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="hit_obstacle" from="." to="." method="_on_HitEffect_hit_obstacle"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
